--- a/kubernetes/frontendproxy/ingress.yaml
+++ b/kubernetes/frontendproxy/ingress.yaml
@@ -5,10 +5,13 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:381492137122:certificate/e6d1b52e-91b3-4af7-a175-afb1bd1ada87
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'   
 spec:
   ingressClassName: alb
   rules:
-    - host: example.com
+    - host: micro.dominicsheytanya.org
       http:
         paths:
           - path: "/"
