--- a/kubernetes/productcatalog/deploy.yaml
+++ b/kubernetes/productcatalog/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
         - name: productcatalogservice
-          image: abhishekf5/product-catalog:13134113508
+          image: dts81/product-catalog:16628156266
           imagePullPolicy: IfNotPresent
           ports:
             
